# disk-cleaner

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_PRINCIPLES.md  LICENSE  NOTICE.md  README.md  README.tr.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: appimage.yml  ci.yml  i18n.yml
assets/icon/: README.md
assets/screenshots/: README.md
disk_cleaner/: __init__.py  __main__.py  _bus.py  _gtk.py  _tasks.py  app.py  cli.py  cli_helpers.py  config.py  errors.py  events.py  i18n.py  runtime.py  settings.py  theme.py  utils.py
disk_cleaner/api/: __init__.py  server.py
disk_cleaner/cleaners/: __init__.py  base.py  command.py  contents.py  safe_path.py
disk_cleaner/controllers/: __init__.py  main.py  suggestion.py  task_list.py  treemap.py
disk_cleaner/core/: __init__.py  apps.py  kernels.py  process.py  safe_remove.py  score.py  sizing.py  system_helpers.py  walker.py
disk_cleaner/scanners/: __init__.py  apps.py  artifacts.py  base.py  duplicates.py  empty.py  explorer.py  old_files.py  similar.py  system.py  user_rules.py
disk_cleaner/storage/: __init__.py  du_cache.py  snapshots.py
disk_cleaner/ui/: __init__.py
disk_cleaner/viz/: __init__.py  colors.py  strategy.py  (+4 more)
docs/: API.md  ARCHITECTURE.md  BRAND.md  CLEANER_RULES.md  CLI.md  I18N.md  LICENSING.md  MAINTAINABILITY.md  PRESS_KIT.md  SCANNERS.md  VERSIONING.md
packaging/: disk-cleaner.appdata.xml  disk-cleaner.desktop
po/: Makefile  messages.pot  tr.po
snap/: snapcraft.yaml
tests/: conftest.py  test_apps.py  test_cleaners.py  test_cli.py  test_cli_features.py  test_cli_helpers.py  test_controllers_main.py  test_controllers_suggestion.py  test_controllers_task_list.py  test_controllers_treemap.py  test_core_score.py  test_desktop_entry.py  test_du_cache_integration.py  test_events.py  test_imports.py  test_runtime.py  test_safe_remove.py  test_scanners.py  test_settings.py  test_sizing.py  test_utils.py  test_viz.py  test_walker.py  test_watchdog.py
(+17 files in other folders)
